<resources>

<<<<<<< HEAD
    <string name="delete_object">Delete Object</string>
=======
        
    <string name="server_client_id">533610752233-l7dmm8addb8t4oaij37kfudv7bftmgim.apps.googleusercontent.com</string>
>>>>>>> 65528eb649a3972ee3d68673670a85542059b2f6
    <string name="app_name">Smart Album with Cloud </string>
        <!--Login Module-->
        
    <string name="login_username">e-mail/phone number </string>
        
    <string name="password">Password</string>
        
    <string name="login">Login </string>
    <string name="selected_image">Selected Image</string>    
    <string name="reget_password">Retrieve password </string>
    <string name="DL">Delete Objects</string>
    <string name="regist_now">Register now</string>
        
    <string name="please_input_phone_number">Please enter your mobile number </string>
        
    <string name="please_input_verify_code">Enter the verification code </string>
        
    <string name="get_verify_code">Get the verification code </string>
        
    <string name="please_input_password">Please enter a password</string>
        
    <string name="please_input_email">Please enter the email </string>
        
    <string name="confirm_password"> Confirm password </string>
        
    <string name="regist">Register </string>
        
    <string name="send_success">Send successfully </string>
        
    <string name="please_input_right_number">Please enter the correct mobile number </string>
        
    <string name="password_not_equal">Inconsistent input passwords </string>
        
    <string name="verification_error">Verification code error </string>
        
    <string name="username_password_cannot_empty">Account and password cannot be empty</string>
        
    <string name="login_success"> Login success </string>
        
    <string name="connect_failure">Failed to connect to the server, please check the network connection </string>
        
    <string name="remember_password">Remember password </string>
        
    <string name="login_failure">Login failed, please check if the account and password are correct </string>
        
    <string name="auto_login">Automatic login</string>
        
    <string name="user_exist">This user already exists, please log in directly </string>
        
    <string name="please_input_username">Please enter the username </string>

        
    <string name="album">Album</string>
        
    <string name="photo">Photo </string>
        
    <string name="open">Open </string>
        
    <string name="close">Close </string>
        
    <string name="setting">Settings </string>
        
    <string name="search">Search </string>
        
    <string name="username">Username</string>

        
    <string name="upload_img">Detect Objects</string>
        
    <string name="find">Find </string>
        
    <string name="advanced_finding">Advanced Search</string>
        
    <string name="take_photo">Photograph </string>
        
    <string name="share">Share</string>
        
    <string name="save_failure"> Save failed </string>
        
    <string name="send">Send </string>
        
    <string name="detail">Details</string>
        
    <string name="delete">Delete </string>
        
    <string name="file_info">File Information : </string>
        
    <string name="filepath">File Path : </string>
        
    <string name="photo_detail">Image details</string>
        
    <string name="sorry_not_found">Sorry, no eligible content was found</string>
        
    <string name="searching">Searching...</string>
        
    <string name="cloud">Cloud </string>
        
    <string name="click_to_login">Unable to view cloud photos without login, click login </string>
        
    <string name="share_information"> Come and use the quick check album, easily manage the album, and cloud backup </string>
    <string name="title_activity_album_map">Map</string>

    <!-- for Google Drive File Selection -->
    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Confirm</string>
    <string name="selected_folder_label">Selected folder:</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name "%1$s"?</string>
    <string name="create_folder_success">Created new folder</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="up_label">Up</string>
    <string name="select_folder">Select a folder</string>
    <string name="select_file">Select file</string>
    <string name="folder_not_selected">No folder selected, can not continue.</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dlaty">DLaty</string>


</resources>