<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

        <com.zjianhao.view.TouchImageView
            android:id="@+id/photo_detail_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="matrix"
            android:layout_gravity="center"
            />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/album_header_bar_height"
        android:background="@null" >

        <ImageView
            android:id="@+id/photo_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/title_view_left_back_padding_left"
            android:paddingRight="5.0dip"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_back_white_24dp" />
        <TextView
            android:id="@+id/photo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IMG-2035_34-443"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/photo_detail_back"
            android:layout_marginLeft="10dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:background="@color/black"
        >

        <LinearLayout
            android:id="@+id/photo_send_ll"
            android:layout_width="50dp"
            android:layout_height="50dp"
<<<<<<< HEAD
=======
            android:orientation="vertical"
            android:layout_toLeftOf="@+id/photo_detail_ll"
>>>>>>> 65528eb649a3972ee3d68673670a85542059b2f6
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@+id/photo_detail_ll"
            android:layout_toLeftOf="@+id/photo_detail_ll"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_send_white_18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/send"
                android:textColor="@color/white" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/photo_detail_ll"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_photo_white_18dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/detail"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"

                />

        </LinearLayout>

        <LinearLayout
<<<<<<< HEAD
            android:id="@+id/delete_object"
            android:layout_width="50dp"
            android:layout_height="50dp"
=======
            android:id="@+id/photo_DL_I"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/photo_detail_ll"
>>>>>>> 65528eb649a3972ee3d68673670a85542059b2f6
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/photo_detail_ll"
            android:layout_toRightOf="@+id/photo_detail_ll"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_photo_white_18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
<<<<<<< HEAD
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/delete_object"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="12dp"
=======
                android:textColor="@color/white"
                android:text="@string/DL"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
>>>>>>> 65528eb649a3972ee3d68673670a85542059b2f6
                />

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>